<resources>
    <string name="app_name">WorkoutTimer</string>
    <string name="btnAdd">追加</string>
    <string name="btnView">一覧表示</string>
    <string name="name">名前</string>
    <string name="workout_time">トレーニング（秒）</string>
    <string name="rest_time">休憩（秒）</string>
    <string name="number">繰り返し回数</string>
    <string name="set_count">セット数（回）</string>
    <string name="set_during">セット間の休憩（秒）</string>
    <string name="btnCancel">キャンセル</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>

    <!-- Sync Preferences -->
    <string name="sync_title">音を出す</string>
    <string name="attachment_title">バイブレーション</string>
    <string name="sync2Hand_title">秒針の音を出す</string>

    <string name="btnUpdate">更新</string>
    <string name="select_color">Select a color</string>
</resources>
