<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edtName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/name" />

    <LinearLayout
        android:id="@+id/part1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/edtName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/workout_time" />

        <EditText
            android:id="@+id/edtWorkoutTime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:digits="0123456789"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/part2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/part1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/rest_time" />

        <EditText
            android:id="@+id/edtRestTime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="51dp"
            android:digits="0123456789"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/part3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/part2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="@string/number" />
    <EditText
        android:id="@+id/edtNumber"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:inputType="number"
        android:gravity="center"
        android:digits="0123456789"
        android:maxLength="4"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/part4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/part3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="@string/set_count" />
    <EditText
        android:id="@+id/edtSetCount"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:inputType="number"
        android:gravity="center"
        android:digits="0123456789"
        android:maxLength="4"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/part5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/part4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="@string/set_during" />

    <EditText
        android:id="@+id/edtSetDuring"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:gravity="center"
        android:digits="0123456789"
        android:maxLength="4"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_centerHorizontal="true"
        android:minWidth="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/part5"
        android:text="@string/btnUpdate"
        style="@style/Widget.AppCompat.Button.Colored"/>


</RelativeLayout>

